# gpcc

./: .gitignore  CMakeLists.md  CMakeLists.txt  README.md  SECURITY.md  history.txt
.github/workflows/: build-test.yaml  scorecard.yaml
cmake/: common.cmake  compiler_warning_options.cmake  toolchain_gcc_ubsan.cmake
doc/: howto_integrate_doxygen_into_other_project.md  howto_integrate_into_topproject_doxygen.md  special_unittest_configuration_options.md
doc/doxygen/: doxyfile.in  doxyfile_chibios_arm  doxyfile_chibios_arm_extract_all  doxyfile_epos_arm  doxyfile_epos_arm_extract_all  doxyfile_linux_arm  doxyfile_linux_arm_extract_all  doxyfile_linux_arm_tfc  doxyfile_linux_arm_tfc_extract_all  doxyfile_linux_x64  doxyfile_linux_x64_extract_all  doxyfile_linux_x64_tfc  doxyfile_linux_x64_tfc_extract_all  doxyfile_zephyr  doxyfile_zephyr_extract_all
doc/figures/osal/os/: priority_mapping_zephyr.odg
include/gpcc/cli/: CLIColors.hpp
include/gpcc/container/: FixCapFIFO.hpp  FixCapFIFO.tcc  IntrusiveDList.tcc
include/gpcc/cood/: ObjectARRAY.hpp  ObjectARRAY_wicb.hpp  ObjectVAR.hpp  ObjectVAR_wicb.hpp
include/gpcc/cood/cli/: CLIAdapterBase.hpp
include/gpcc/dsp/filter/: MedianFilter1D.tcc
include/gpcc/execution/cyclic/: TriggeredThreadedCyclicExec.hpp
include/gpcc/log/: Logger.hpp
include/gpcc/osal/: AdvancedMutexLocker.hpp  ConditionVariable.hpp  IThreadRegistry.hpp  Mutex.hpp  MutexLocker.hpp  Panic.hpp  RWLock.hpp  RWLockReadLocker.hpp  RWLockWriteLocker.hpp  Semaphore.hpp  Thread.hpp  ThreadRegistry.hpp  definitions.hpp
include/gpcc/osal/universal/: AdvancedMutexLocker.hpp  IThreadRegistry.hpp  MutexLocker.hpp  RWLock.hpp  RWLockReadLocker.hpp  RWLockWriteLocker.hpp  ThreadRegistry.hpp
include/gpcc/raii/: unique_c_ptr.hpp
include/gpcc/stdif/serial/: ISyncSerialIO.hpp
include/gpcc/stream/: IStreamReader.hpp
include/gpcc/string/: BinaryDumper.hpp  StringComposer.hpp  tools.hpp  tools.tcc
include/gpcc/time/: TimePoint.hpp  TimeSpan.hpp  clock.hpp
scripts/: build_doxygen_chibios_arm.sh  build_doxygen_chibios_arm_extract_all.sh  build_doxygen_epos_arm.sh  build_doxygen_epos_arm_extract_all.sh  build_doxygen_linux_arm.sh  build_doxygen_linux_arm_extract_all.sh  build_doxygen_linux_arm_tfc.sh  build_doxygen_linux_arm_tfc_extract_all.sh  build_doxygen_linux_x64.sh  build_doxygen_linux_x64_extract_all.sh  build_doxygen_linux_x64_tfc.sh  build_doxygen_linux_x64_tfc_extract_all.sh  build_doxygen_zephyr.sh  build_doxygen_zephyr_extract_all.sh  build_productive.sh  build_unittest-buildsrv.sh  build_unittest-notfc.sh  build_unittest.sh  build_x.sh  cmake_config_auto-productive-release.sh  cmake_config_auto-unittest-debug.sh  cmake_config_auto-unittest-release.sh  cmake_config_nativelinux-productive-release.sh  cmake_config_nativelinux-unittest-debug-notfc.sh  cmake_config_nativelinux-unittest-debug.sh  cmake_config_nativelinux-unittest-release-notfc.sh  cmake_config_nativelinux-unittest-release.sh  cmake_config_unittest-buildsrv_debug.sh  cmake_config_unittest-buildsrv_release.sh  cmake_config_unittest-notfc_debug.sh  cmake_config_unittest-notfc_release.sh  cmake_config_unittest_debug.sh  cmake_config_unittest_release.sh  execute_unittests-buildsrv.sh  execute_unittests-notfc.sh  execute_unittests.sh  execute_unittests_memcheck.sh  full_clean.sh  rebuild_doxygen_for_all_configurations.sh
src/cli/: CLI.cpp  exceptions.cpp
src/compiler/: compiler.dox
src/container/: BitField.cpp  RAMBlock.cpp
src/cood/: ObjectARRAY.cpp  ObjectARRAY_wicb.cpp  ObjectRECORD.cpp  ObjectVAR.cpp  ObjectVAR_wicb.cpp  data_types.cpp
src/cood/cli/: CLIAdapterBase.cpp
src/cood/remote_access/infrastructure/: MultiRODACLIClientBase.cpp  Multiplexer.cpp  MultiplexerPort.cpp  RODACLIClientBase.cpp  SingleRODACLIClientBase.cpp
src/cood/remote_access/requests_and_responses/: ObjectEnumRequest.cpp  ObjectEnumResponse.cpp  ObjectInfoRequest.cpp  ObjectInfoResponse.cpp  PingRequest.cpp  ReadRequest.cpp  ReadRequestResponse.cpp  RequestBase.cpp  ResponseBase.cpp  WriteRequest.cpp  WriteRequestResponse.cpp
src/doc/: coding_style.dox
src/execution/cyclic/: TriggeredThreadedCyclicExec.cpp
src/file_systems/cli/: IFSCLICommands.cpp
src/file_systems/linux_fs/internal/: StdIOFileReader.hpp  tools.cpp
src/log/: CMakeLists.txt  Logger.cpp  log.dox
src/log/integration/: log_integration.dox
src/log/integration/zephyr/: CMakeLists.txt  ZephyrFrontEnd.cpp  log_integration_zephyr.dox
src/log/internal/: LogMessage.cpp
src/osal/: osal.dox
src/osal/os/chibios_arm/: ConditionVariable.cpp  Panic.cpp  Thread.cpp
src/osal/universal/: AdvancedMutexLocker.cpp  RWLock.cpp  RWLockReadLocker.cpp  RWLockWriteLocker.cpp  ThreadRegistry.cpp
src/raii/: CMakeLists.txt  unique_c_ptr.cpp
src/stdif/storage/: IRandomAccessStorageCLI.cpp
src/string/: BinaryDumper.cpp  CMakeLists.txt  StringComposer.cpp  tools.cpp
src/time/: TimeSpan.cpp
testcases/callback/: TestMultiCallback.cpp  TestMultiCallbackSM.cpp  TestMultiCallbackSM_OneParam.cpp  TestMultiCallback_OneParam.cpp
testcases/cli/: TestCLI.cpp  TestFakeTerminal.cpp
testcases/compiler/: TestCompilerDefs.cpp
testcases/container/: CMakeLists.txt  TestFixCapFIFO.cpp
testcases/cood/: Test_data_types.cpp
testcases/cood/cli/: TestCLIAdapterForCANOpen.cpp
testcases/execution/async/: TestIWorkQueue.hpp
testcases/execution/cyclic/: TriggerProvider.cpp  TriggerProvider.hpp  UUT_TriggeredThreadedCyclicExec.cpp  UUT_TriggeredThreadedCyclicExec.hpp
testcases/file_systems/cli/: TestIFSCLICommands.cpp
testcases/file_systems/eeprom_section_system/: EEPROMSectionSystemTestFixture.cpp  EEPROMSectionSystemTestFixture.hpp  FakeEEPROM.cpp  FakeEEPROMUndo.cpp  TestEEPROMSectionSystem.cpp
testcases/log/logfacilities/: FakeBackend.cpp  TestILogFacility.hpp
testcases/osal/: TestMutex.cpp
testcases/raii/: CMakeLists.txt  Test_unique_c_ptr.cpp
testcases/stdif/storage/: TestIRandomAccessStorageCLI.cpp
testcases/stream/: TestMemStreamReader.cpp  TestMemStreamWriter.cpp
testcases/string/: CMakeLists.txt  TestBinaryDumper.cpp  Test_tools.cpp
(+54 files in other folders)
